<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radio_Group"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_valor"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_number2">

        <RadioButton
            android:id="@+id/rbtn_suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sumar"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbtn_resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restar"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbtn_multitplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbtn_dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dividir"
            android:textSize="20sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/addnumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/et_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/addnumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_number1" />

    <TextView
        android:id="@+id/tv_valor"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginEnd="60dp"
        android:text="@string/valor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:onClick="Calcular"
        android:text="@string/calcular"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>